# iPlug2

./: .editorconfig  .gitattributes  CMakeLists.txt  _app_delegate_8h_source.html  _app_delegate_8m_source.html  _app_view_controller_8h_source.html  _app_view_controller_8mm_source.html  _generic_u_i_8h_source.html  _generic_u_i_8mm_source.html  _i_bubble_control_8h_source.html  _i_color_picker_control_8h_source.html  _i_control_8cpp_source.html  _i_control_8h.html  _i_control_8h_source.html  _i_controls_8cpp_source.html  _i_controls_8h.html  _i_controls_8h_source.html  _i_corner_resizer_control_8h.html  _i_corner_resizer_control_8h_source.html  _i_f_p_s_display_control_8h_source.html  _i_graphics_8cpp_source.html  _i_graphics_8h_source.html  _i_graphics__include__in__plug__hdr_8h_source.html  _i_graphics__include__in__plug__src_8h_source.html  _i_graphics_a_g_g_8cpp_source.html  _i_graphics_a_g_g_8h_source.html  _i_graphics_cairo_8cpp_source.html  _i_graphics_cairo_8h_source.html  _i_graphics_canvas_8cpp_source.html  _i_graphics_canvas_8h_source.html  _i_graphics_constants_8h_source.html  _i_graphics_core_text_8h_source.html  _i_graphics_core_text_8mm_source.html  _i_graphics_editor_delegate_8cpp_source.html  _i_graphics_editor_delegate_8h_source.html  _i_graphics_flex_box_8cpp_source.html  _i_graphics_flex_box_8h_source.html  _i_graphics_i_o_s_8h_source.html  _i_graphics_i_o_s_8mm_source.html  _i_graphics_i_o_s__src_8m_source.html  (+604 more)
Dependencies/: CMakeLists.txt
Documentation/: Doxyfile
Examples/: duplicate.py
Examples/IPlugChunks/: CMakeLists.txt  IPlugChunks.cpp
Examples/IPlugChunks/resources/: main.rc
Examples/IPlugControls/: CMakeLists.txt  IPlugControls.cpp  IPlugControls.h
Examples/IPlugControls/resources/: main.rc
Examples/IPlugDrumSynth/: CMakeLists.txt  IPlugDrumSynth.cpp  IPlugDrumSynth.h  IPlugDrumSynth_DSP.h
Examples/IPlugDrumSynth/resources/: main.rc
Examples/IPlugEffect/: CMakeLists.txt  IPlugEffect.cpp  IPlugEffect.h
Examples/IPlugEffect/installer/: IPlugEffect.iss
Examples/IPlugEffect/resources/: main.rc
Examples/IPlugEffect/scripts/: make_zip.py  makedist-mac.sh  makedist-web.sh  makedist-win.bat  makeinstaller-mac.sh  prepare_resources-mac.py  update_installer_version.py
Examples/IPlugFaustDSP/resources/: main.rc
Examples/IPlugInstrument/: CMakeLists.txt  IPlugInstrument.cpp  IPlugInstrument.h  IPlugInstrument_DSP.h
Examples/IPlugInstrument/resources/: main.rc
Examples/IPlugMidiEffect/: IPlugMidiEffect.cpp
Examples/IPlugMidiEffect/resources/: main.rc
Examples/IPlugOSCEditor/resources/: main.rc
Examples/IPlugReaperExtension/resources/: main.rc
Examples/IPlugResponsiveUI/resources/: main.rc
Examples/IPlugSideChain/resources/: main.rc
Examples/IPlugSurroundEffect/resources/: main.rc
Examples/IPlugWebUI/resources/: main.rc
IGraphics/: IControl.cpp  IControl.h  IGraphics.cpp  IGraphics.h  IGraphicsConstants.h  IGraphicsEditorDelegate.h  IGraphicsLiveEdit.h  IGraphicsPathBase.h  IGraphicsPopupMenu.h  IGraphicsPrivate.h  IGraphicsStructs.h  IGraphicsUtilities.h  IGraphics_include_in_plug_hdr.h  IGraphics_include_in_plug_src.h  IGraphics_select.h
IGraphics/Controls/: IBubbleControl.h  IControls.cpp  IControls.h  ICornerResizerControl.h  IPopupMenuControl.h  ITextEntryControl.cpp  IVKeyboardControl.h  IVMeterControl.h  IVNumberBoxControl.h  IVPresetManagerControl.h
IGraphics/Controls/Test/: TestArcControl.h  TestDrawContextControl.h  TestGLControl.h
IGraphics/Drawing/: IGraphicsAGG.cpp  IGraphicsAGG.h  IGraphicsCairo.cpp  IGraphicsCairo.h  IGraphicsCanvas.cpp  IGraphicsCanvas.h  IGraphicsLice.cpp  IGraphicsLice.h  IGraphicsNanoVG.cpp  IGraphicsNanoVG.h  IGraphicsSkia.h
IGraphics/Extras/: IGraphicsFlexBox.cpp
IPlug/: IPlug.cpp  IPlug.h  IPlugAPIBase.cpp  IPlugAPIBase.h  IPlugConstants.h  IPlugEditorDelegate.h  IPlugLogger.h  IPlugMath.h  IPlugMathCommon.h  IPlugMathConstants.h  IPlugMathConversions.h  IPlugMidi.h  IPlugPCH.h  IPlugParameter.h  IPlugPaths.cpp  IPlugPluginBase.cpp  IPlugPluginBase.h  IPlugPreprocessor.h  IPlugProcessor.cpp  IPlugProcessor.h  IPlugSWELL.h  IPlugStructs.h  IPlugTimer.cpp  IPlugTimer.h  IPlugUtilities.h  IPlug_include_in_plug_src.h
IPlug/AAX/: IPlugAAX.cpp  IPlugAAX_Describe.cpp
IPlug/APP/: IPlugAPP.cpp  IPlugAPP_dialog.cpp  IPlugAPP_host.cpp  IPlugAPP_host.h  IPlugAPP_main.cpp
IPlug/AUv2/: IPlugAU.cpp
IPlug/AUv3/: IPlugAUAudioUnit.mm  IPlugAUv3.mm
IPlug/Extras/: ADSREnvelope.h  LFO.h  NChanDelay.h  Oscillator.h  Oscillator_table.h  Oversampler.h  Smoothers.h
IPlug/Extras/Faust/: IPlugFaustGen.cpp
IPlug/Extras/OSC/: IPlugOSC.cpp
IPlug/Extras/Synth/: MidiSynth.cpp  MidiSynth.h  SynthVoice.h
IPlug/Extras/WebView/: IPlugWebViewEditorDelegate.cpp
IPlug/PAL/: Platform.h  PlatformCompiler.h  System.h  Type.h
IPlug/PAL/Generic/: Generic_System.h
IPlug/PAL/IOS/: IOSPlatform.h
IPlug/PAL/Linux/: LinuxPlatform.h
IPlug/PAL/Mac/: MacPlatform.h
IPlug/PAL/WEB/: WEBPlatform.h
IPlug/PAL/Windows/: WindowsPlatform.h  WindowsSDK.h  Windows_System.cpp  (+1 more)
IPlug/VST2/: IPlugVST2.cpp
IPlug/VST3/: IPlugVST3.cpp  IPlugVST3.h  IPlugVST3_Common.h  IPlugVST3_Controller.cpp  IPlugVST3_Controller.h  IPlugVST3_ControllerBase.h  IPlugVST3_Parameter.h  IPlugVST3_Processor.cpp  IPlugVST3_Processor.h  IPlugVST3_ProcessorBase.cpp  IPlugVST3_ProcessorBase.h  IPlugVST3_View.h
IPlug/WEB/: IPlugWAM.cpp  IPlugWeb.cpp
Scripts/: notarise.sh
Scripts/templates/: gitignore_template
WDL/: CMakeLists.txt
cmake/: IPlug2Core.cmake  IPlug2Helpers.cmake  IPlug2Internal.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_2.js  classes_5.js  classes_6.js  classes_a.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+5 more)
(+11 files in other folders)
